# showmethemoney

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  README_ETF_CRAWLER.md  SWAGGER_INFO.md  docker-compose.yml  main.py  myprompt_frontend.md  pyproject.toml  summary.txt  test_crawlers.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: IMPLEMENTATION.md  README.md  __init__.py  api_agent.py  base_agent.py  data_ingestion_agent.py  data_processing_agent.py  data_storage_agent.py  monitoring_agent.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  etf.py  live_metrics.py  users.py
backend/app/core/: config.py  logger.py  security.py
backend/app/db/: models.py  session.py
backend/app/models/: etf.py  user.py
backend/app/services/: data_manager.py  etf_updater.py  scheduler.py  user_service.py
backend/app/services/crawlers/: __init__.py  alphaarchitect.py  base.py  dimensional.py  direxion.py  fidelity.py  firsttrust.py  franklintempleton.py  globalx.py  goldmansachs.py  graniteshares.py  invesco.py  ishares.py  jpmorgan.py  pacer.py  pimco.py  roundhill.py  spdr.py  vaneck.py  vanguard.py  wisdomtree.py  yieldmax.py  (+1 more)
backend/examples/: agent_examples.py  ingestion_processing_examples.py
backend/observability/: middleware.py  telemetry.py
backend/scripts/: manual_update.py
backend/tests/: conftest.py  test_additional_crawlers.py  test_dimensional_crawler.py  test_firsttrust_crawler.py  test_franklintempleton_crawler.py  test_goldmansachs_crawler.py  test_invesco_crawler.py  test_ishares_crawler.py  test_jpmorgan_crawler.py  test_new_crawlers.py  test_new_providers_crawler.py  test_roundhill_crawler.py  test_security.py  test_spdr_crawler.py  test_users.py  test_vanguard_crawler.py  test_yieldmax_crawler.py
backend/tests/agents/: __init__.py  test_api_agent.py  test_data_ingestion_agent.py  test_data_processing_agent.py  test_data_storage_agent.py  test_integration.py  test_monitoring_agent.py
(+71 files in other folders)
